Fixed jumping form elements borders.

--- a/components/00-base/mixins/_form.scss
+++ b/components/00-base/mixins/_form.scss
@@ -21,3 +21,10 @@
     pointer-events: none;
   }
 }
+
+//
+// Set inset border for a control.
+//
+@mixin ct-form-control-border-inset($color, $width: ct-particle(0.125)) {
+  box-shadow: inset 0 0 0 $width $color;
+}
