--- a/components/01-atoms/textfield/textfield.scss
+++ b/components/01-atoms/textfield/textfield.scss
@@ -11,25 +11,16 @@
   @include ct-form-control-disabled($ct-textfield-disabled-opacity);
   @include ct-typography('label-small');
 
-  box-sizing: border-box;
   border-radius: $ct-textfield-border-radius;
   border-style: solid;
   border-width: $_border-width;
-  margin: $_hover-border-width - $_border-width $_hover-border-width - $_border-width;
   padding: ct-spacing(1.625) ct-spacing(2);
   width: 100%;
-
-  &:hover {
-    border-width: $_hover-border-width;
-    margin: 0;
-  }
 
   &:focus-visible {
     outline-style: solid;
     outline-width: $ct-textfield-outline-width;
     outline-offset: $ct-textfield-outline-offset;
-    margin: 0;
-    border-width: $_hover-border-width;
   }
 
   @include ct-component-theme($root) using($root, $theme) {
@@ -50,6 +41,7 @@
         @include ct-component-property($root, $theme, hover, color);
         @include ct-component-property($root, $theme, hover, border-color);
         @include ct-component-property($root, $theme, hover, background-color);
+        @include ct-form-control-border-inset(ct-component-var($root, $theme, hover, border-color), $_hover-border-width - $_border-width);
       }
 
       &:focus-visible {
@@ -63,6 +55,7 @@
       @include ct-component-property($root, $theme, invalid, color);
       @include ct-component-property($root, $theme, invalid, border-color);
       @include ct-component-property($root, $theme, invalid, background-color);
+      @include ct-form-control-border-inset(ct-component-var($root, $theme, invalid, border-color), $_hover-border-width - $_border-width);
 
       &::placeholder {
         @include ct-component-property($root, $theme, invalid, color);
